@@ -1,3 +1,8 @@
+2018-07-17  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/86539
+	* testsuite/libgomp.c++/pr86539.C: New test.
+
 2018-07-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/86443
